--- a/client/landing/stepper/declarative-flow/internals/steps-repository/choose-a-domain/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/choose-a-domain/style.scss
@@ -1,10 +1,217 @@
+$videopress-mobile-layout-width: 1200px;
+
 .videopress.choose-adomain {
+	--color-text-subtle: #a7aaad;
+	--studio-green-60: #1ed15a;
+
+	.chooseADomain.is-wide-layout {
+		max-width: 1160px;
+	}
+
+	.step-container__header {
+		@media (min-width: $videopress-mobile-layout-width) {
+			padding: 0;
+			margin-bottom: 40px;
+		}
+
+		padding: 20px;
+		margin-bottom: 0px;
+	}
+
+	.register-domain-step__search {
+		@media (min-width: $videopress-mobile-layout-width) {
+			padding-top: 8px;
+			padding-left: 0px;
+			padding-right: 0px;
+		}
+
+		padding: 20px;
+		padding-bottom: 24px;
+	}
+
+	.step-container__content {
+		@media (min-width: $videopress-mobile-layout-width) {
+			flex-direction: row;
+		}
+
+		display: flex;
+		flex-direction: column;
+		align-items: flex-start;
+		gap: 80px;
+
+		.register-domain-step {
+			@media (min-width: $videopress-mobile-layout-width) {
+				width: 800px;
+			}
+			width: 100%;
+		}
+
+		.register-domain-step__domain-side-content-container-domain-explanation-image {
+			display: none;
+		}
+
+		.aside-sections {
+			@media (min-width: $videopress-mobile-layout-width) {
+				width: 280px;
+			}
+			width: 100%;
+
+			display: flex;
+			flex-direction: column;
+			gap: 40px;
+
+			.aside-spacer {
+				display: block;
+				height: 1px;
+				width: 100%;
+				background-color: rgba(255, 255, 255, 0.2);
+			}
+
+			.aside-section {
+				@media (min-width: $videopress-mobile-layout-width) {
+					padding: 0;
+				}
+
+				padding: 20px;
+				display: flex;
+				flex-direction: column;
+				align-items: flex-start;
+				font-size: 14px;
+				font-weight: normal;
+				gap: 12px;
+	
+				h2 {
+					color: #fff;
+					font-size: 20px;
+					font-weight: normal;
+				}
+
+				span {
+					color: #a7aaad;
+				}
+
+				button {
+					font-weight: normal;
+					padding: 0;
+					margin: 0;
+				}
+			}
+		}
+	}
+
 	.formatted-header__subtitle {
 		text-align: center !important;
+	}
 
+	.step-container__navigation-link {
+		font-size: 1rem;
+		line-height: 1.55;
+		color: #fff;
+		margin-left: 5px;
+	}
+
+	.register-domain-step__search-card {
+		border-radius: 4px;
+	}
+
+	.search-component {
+		box-shadow: none;
+
+		button,
+		.components-button:focus:not(:disabled),
+		input {
+			border: 0px;
+			outline: none;
+		}
+	}
+
+	.search-filters__dropdown-filters {
 		button {
-			font-size: 1rem;
-			line-height: 1.55;
+			border: 0px;
+		}
+	}
+
+	.domain-suggestion {
+		background: none;
+		box-shadow: none;
+		border: none;
+		border-bottom: solid 1px rgba(255, 255, 255, 0.2);
+
+		.domain-registration-suggestion__domain-title-name {
+			color: #c3c4c7;
+		}
+		.domain-registration-suggestion__domain-title-tld {
+			color: #fff;
+		}
+
+		.domain-registration-suggestion__badges {
+			.badge--info-green {
+				background-color: #b8e6bf;
+				color: #00450C;
+			}
+			.badge--info-purple {
+				background-color: #e5cfe8;
+				color: #3c2861;
+			}
+		}
+
+		.domain-suggestion__action {
+			border: solid 1px rgba(255, 255, 255, 0.2);
+			border-radius: 4px;
+			color: #FFF;
+			background: none;
+		}
+	}
+
+	.domain-suggestion.is-placeholder,
+	.featured-domain-suggestion--is-placeholder {
+		background: none;
+		box-shadow: none;
+		border: solid 1px rgba(255, 255, 255, 0.2);
+
+		.domain-registration-suggestion__badges,
+		.domain-registration-suggestion__match-reasons {
+			background-color: rgba(255, 255, 255, 0.2);
+		}
+	}
+
+	.domain-suggestion.is-placeholder {
+		.domain-suggestion__content {
+			background-color: rgba(255, 255, 255, 0.2);
+		}
+	}
+
+	.featured-domain-suggestions {
+		.domain-suggestion {
+			margin-bottom: 12px;
+			background-color: rgba(255, 255, 255, 0.15);
+			border: 0px none;
+			box-shadow: none;
+
+			.domain-registration-suggestion__domain-title-name,
+			.domain-registration-suggestion__domain-title-tld {
+				color: #fff;
+			}
+
+			.domain-suggestion__action {
+				border: none;
+				border-radius: 4px;
+				background-color: #ffe61c;
+				color: #000;
+			}
+		}
+	}
+
+	.register-domain-step__next-page {
+		background: none;
+		border: none;
+		box-shadow: none;
+
+		.register-domain-step__next-page-button {
+			border: solid 1px rgba(255, 255, 255, 0.2);
+			border-radius: 4px;
+			color: #FFF;
+			background: none;
 		}
 	}
 }
