Added max-height to all single images

--- a/client/blocks/reader-featured-image/style.scss
+++ b/client/blocks/reader-featured-image/style.scss
@@ -1,8 +1,11 @@
 .reader-featured-image {
-	display: flex;
 	align-items: center;
-	justify-content: center;
+	border-radius: 6px;
 	cursor: pointer;
+	display: flex;
+	justify-content: center;
+	max-height: 300px;
+	overflow-y: hidden;
 	img {
 		border-radius: 6px;
 	}
