Add classname to body so we can target VideoPress stepper specifically (#67894)

--- a/client/landing/stepper/declarative-flow/internals/videopress.scss
+++ b/client/landing/stepper/declarative-flow/internals/videopress.scss
@@ -4,7 +4,7 @@ $videopress-theme-base-text-color: #fff;
 $videopress-theme-yellow: #ffe61c;
 $videopress-theme-header-subtitle-text-color: #a7aaad;
 
-body {
+body.is-videopress-stepper {
 	background-color: #010101;
 	color: $videopress-theme-base-text-color;
 
