HelpCenter: add box-sizing to fix overflow of submit (#67941)

--- a/packages/help-center/src/components/help-center-contact-form.scss
+++ b/packages/help-center/src/components/help-center-contact-form.scss
@@ -93,6 +93,7 @@ section.contact-form-submit {
 	bottom: 0;
 	left: 0;
 	width: 100%;
+	box-sizing: border-box;
 	background: #fff;
 	padding: 16px;
 	border-top: 1px solid rgba(0, 0, 0, 0.1);
