--- a/client/landing/stepper/declarative-flow/internals/global.scss
+++ b/client/landing/stepper/declarative-flow/internals/global.scss
@@ -183,7 +183,18 @@ button {
 
 					span {
 						font-size: $font-body-extra-small;
-						color: var(--studio-blue-50);
+
+						&.add {
+							color: var(--studio-blue-50);
+						}
+
+						&.replace {
+							color: var(--studio-gray-60);
+
+							&:hover {
+								color: var(--studio-blue-50);
+							}
+						}
 					}
 				}
 			}
