--- a/client/components/site-icon-with-picker/style.scss
+++ b/client/components/site-icon-with-picker/style.scss
@@ -10,7 +10,7 @@ $icon-border-radius: 50%; /* stylelint-disable-line declaration-property-unit-al
 	min-width: 50vw;
 
 	use {
-		fill: #fff;
+		fill: white;
 	}
 }
 
@@ -57,9 +57,7 @@ button.components-button.site-icon-with-picker__upload-button {
 		left: 50%;
 		transform: translate(-50%, -50%);
 	}
-
-	span.replace,
-	span.add {
+	span {
 		position: absolute;
 		width: 200px;
 		display: block;
