Pattern Assembler update a11y (#67716)
- Update tabindex for patternSelector
- Update action bar so it can receive tab

--- a/client/landing/stepper/declarative-flow/internals/steps-repository/pattern-assembler/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/pattern-assembler/style.scss
@@ -84,7 +84,7 @@ $font-family: "SF Pro Text", $sans;
 
 		.pattern-action-bar {
 			display: flex;
-			visibility: hidden;
+			opacity: 0;
 			align-items: center;
 			position: absolute;
 			background: #fff;
@@ -145,13 +145,15 @@ $font-family: "SF Pro Text", $sans;
 					white-space: nowrap;
 				}
 
-				&:hover {
+				&:hover,
+				&:focus,
+				&:focus-within {
 					.pattern-layout__list-item-text {
 						max-width: 154px;
 					}
 
 					.pattern-action-bar {
-						visibility: visible;
+						opacity: 1;
 					}
 				}
 
@@ -267,43 +269,6 @@ $font-family: "SF Pro Text", $sans;
 					box-shadow: 0 0 0 2px var(--color-primary-light);
 					outline: 0;
 				}
-			}
-		}
-	}
-
-	.pattern-action-bar {
-		display: flex;
-		visibility: hidden;
-		align-items: center;
-		position: absolute;
-		background: #fff;
-		height: 27px;
-		right: 0;
-
-		.pattern-action-bar__block {
-			flex-direction: column;
-			display: flex;
-			align-items: center;
-		}
-
-		.pattern-action-bar__action {
-			padding: 0;
-			min-width: 30px;
-			max-width: 30px;
-
-			svg {
-				fill: #2c3338;
-			}
-
-			&:not(:disabled):hover svg {
-				fill: #0675c4;
-			}
-
-			&--move-up,
-			&--move-down {
-				height: 13px;
-				display: flex;
-				align-items: center;
 			}
 		}
 	}
