Fix/Disable stylelint errors for scales/radii (#67901)
* Disable scales/radii errors

* Remove unnecessary stylelint-disable

* Update .stylelintignore

--- a/client/components/date-range/style.scss
+++ b/client/components/date-range/style.scss
@@ -269,6 +269,7 @@
 	}
 
 	.DayPicker-Day--start.DayPicker-Day--end {
+		/* stylelint-disable-next-line scales/radii */
 		border-radius: 200px !important;
 	}
 }
