--- a/client/my-sites/plans/jetpack-plans/product-store/features-list/style.scss
+++ b/client/my-sites/plans/jetpack-plans/product-store/features-list/style.scss
@@ -1,16 +1,14 @@
-@import '@wordpress/base-styles/breakpoints';
-@import '@wordpress/base-styles/mixins';
+@import "@wordpress/base-styles/breakpoints";
+@import "@wordpress/base-styles/mixins";
 
 .features-list {
 	padding: 1.5rem;
-	/* stylelint-disable scales/radii */
 	border-end-start-radius: 8px; /* stylelint-disable-line scales/radii */
 	border-end-end-radius: 8px; /* stylelint-disable-line scales/radii */
-	/* stylelint-enable scales/radii */
 
 	@include break-mobile {
 		padding-bottom: 2.5rem;
-		border: 1px solid var( --studio-gray-0 );
+		border: 1px solid var(--studio-gray-0);
 	}
 
 	@media (max-width: $break-mobile) {
@@ -25,7 +23,7 @@
 .features-list__group--title {
 	font-size: 1.25rem;
 	padding: 1.25rem 1rem;
-	border-bottom: 1px solid var( --studio-gray-5 );
+	border-bottom: 1px solid var(--studio-gray-5);
 	line-height: 24px;
 }
 
@@ -41,7 +39,7 @@
 .features-list__group--features li {
 	padding: 1rem;
 	font-size: $font-body-small;
-	border-bottom: 1px solid var( --studio-gray-5 );
+	border-bottom: 1px solid var(--studio-gray-5);
 	line-height: 24px;
 	display: flex;
 	align-items: center;
