--- a/client/my-sites/plugins/plugin-management-v2/style.scss
+++ b/client/my-sites/plugins/plugin-management-v2/style.scss
@@ -39,3 +39,9 @@
 		inset-inline-end: 10px;
 	}
 }
+
+.button-group.plugin-management-v2__table-button-group {
+	.button:active {
+		border-width: 1px;
+	}
+}
