--- a/client/my-sites/plugins/plugin-management-v2/plugin-row-formatter/style.scss
+++ b/client/my-sites/plugins/plugin-management-v2/plugin-row-formatter/style.scss
@@ -113,13 +113,13 @@ a.button.plugin-row-formatter__plugin-name-card {
 	align-items: center;
 }
 
+.theme-jetpack-cloud .plugin-row-formatter__checkbox[type="checkbox"]:checked::before {
+	content: url(/calypso/images/checkbox-icons/checkmark-jetpack.svg);
+}
+
 // Checkbox for multiselect purposes
 .plugin-row-formatter__checkbox[type="checkbox"] {
 	margin-inline-end: 16px;
-
-	&:checked::before {
-		content: url(/calypso/images/checkbox-icons/checkmark-jetpack.svg);
-	}
 
 	&::after {
 		// Making tap area larger
