Plugins Multisite - Update the plugin autoupdate tooltip visibility (#67984)
* Update the plugin autoupdate tooltip visibility

* Update unit tests

* Use flexbox to centralize the i icon

--- a/client/my-sites/plugins/plugin-action/style.scss
+++ b/client/my-sites/plugins/plugin-action/style.scss
@@ -52,7 +52,11 @@
 	cursor: pointer;
 
 	&.hide {
-		display: none;
+		visibility: hidden;
+
+		.plugin-action__label-text {
+			display: none;
+		}
 	}
 
 	.is-disabled & {
@@ -66,7 +70,12 @@
 	}
 }
 
+.plugin-action__label-disabled-info {
+	display: flex;
+}
+
 .plugin-action__disabled-info.info-popover {
+	visibility: visible;
 	flex: none;
 	margin: 0 4px -1px;
 
@@ -79,6 +88,11 @@
 		// revert the translate(1px,1px) done by needs-offset
 		transform: none;
 	}
+
+}
+
+.plugin-action__disabled-info.info-popover__tooltip {
+	z-index: z-index("root", ".popover.info-popover__tooltip.plugin-action__disabled-info");
 }
 
 .plugin-action__disabled-info-list {
