--- a/client/assets/stylesheets/shared/functions/_z-index.scss
+++ b/client/assets/stylesheets/shared/functions/_z-index.scss
@@ -156,10 +156,12 @@ $z-layers: (
 		".wplink__dialog.dialog.card": 100200,
 		".web-preview": 100200,
 		".popover.ellipsis-menu__menu": 100201,
+		".popover.plugin-action__disabled-info": 100202,
 		".plan-storage__tooltip": 100300,
 		".popover.gallery__order-popover": 100300,
 		"popover.is-dialog-visible": 100300,
 		".popover.info-tooltip__container": 100300,
+		".popover.info-popover__tooltip.plugin-action__disabled-info": 100300,
 		"body .webui-popover": 100300,
 		".fullscreen-fader": 200000,
 		".guided-tours__overlay": 200050,
