Domains: Remove unused `Edit` component and related subcomponents (#67761)
* Remove unused sub components of Edit

* Remove unused MappedDomainType subcomponent

* Remove reference to `Edit` in `domain-management/index`

* Remove RegisteredDomainType and Edit

* Remove unused CSS classes

* Remove `DomainStatus`

* Remove `DomainOnlyNotice`

* Remove unused CSS file and add background class to settings/style.scss

--- a/client/my-sites/domains/domain-management/settings/style.scss
+++ b/client/my-sites/domains/domain-management/settings/style.scss
@@ -2,6 +2,10 @@
 @import "@wordpress/base-styles/breakpoints";
 @import "@wordpress/base-styles/mixins";
 
+body.edit__body-white.theme-default.color-scheme {
+	--color-surface-backdrop: var(--studio-white);
+}
+
 .settings-header__children {
 	white-space: nowrap;
 	overflow: hidden;
@@ -27,7 +31,7 @@
 				.formatted-header__title {
 					font-weight: 400;
 					margin: 0;
-					line-height: 100%;
+					line-height: 100%; /* stylelint-disable-line declaration-property-unit-allowed-list */
 
 					@include break-zoomed-in {
 						font-size: $font-title-medium;
