change styling on admin button on hover to studio blue 50

--- a/client/landing/stepper/declarative-flow/internals/steps-repository/launchpad/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/launchpad/style.scss
@@ -125,8 +125,12 @@
 	padding: 80px 20px 10px;
 	display: none;
 
-	button {
+	.button.navigation-link {
 		text-decoration: underline;
+
+		&:hover {
+			color: var(--studio-blue-50);
+		}
 	}
 
 	@include break-large {
