Add SSO options to wpcc signup flow (#67537)
* Perform regular login after SSO signup in the wpcc flow

The logic was added in bba4f232ca1974ebdb56b8425fec90a2f5b431cc

However, it doesn't not automatically log the user anymore so remove the
logic

* Update oauth-client form style for woo

* Enable social signup for wpcc flow

* Update redirect uri and save redirectToAfterLoginUrl for wpcc flow with Apple login

* Persist url query string in apple sso state

So that we can show the same UI after redirecting back to the calypso

* Make sure the tos link display with woo color

* Make social button width the same size

* Catch sessionStorage.setItem error

* Use winodw.location.origin directly for getRedirectUri instead

* Redirect apple login to state.originalUrlPath

* Fix social response handling

* Make originalUrlPath configurable

* Make queryString configurable

* Update woo social signup enable logic and comment

--- a/client/layout/masterbar/oauth-client.scss
+++ b/client/layout/masterbar/oauth-client.scss
@@ -845,6 +845,11 @@
 		background: none;
 		border: none;
 		text-align: center;
+		margin: 0;
+
+		&.is-blended {
+			padding-top: 16px;
+		}
 	}
 
 	.logged-out-form__links {
@@ -895,10 +900,6 @@
 		}
 	}
 
-	.logged-out-form__footer {
-		margin: 0;
-	}
-
 	.signup-form__woo-wrapper .gridicon {
 		color: var(--color-primary);
 	}
@@ -909,6 +910,20 @@
 
 	.formatted-header__subtitle {
 		display: none;
+	}
+
+	.signup-form__social {
+		p {
+			color: var( --studio-gray-60 );
+		}
+
+		.social-buttons__button {
+			width: 100%;
+		}
+	}
+
+	.signup-form__social-buttons-tos a {
+		color: $woo-purple-60;
 	}
 }
 
