Revert "Add SSO options to wpcc signup flow (#67537)" (#68077)
This reverts commit 28b6e6ae247f53c54a8866d4b86316aedbb3ed21.

--- a/client/layout/masterbar/oauth-client.scss
+++ b/client/layout/masterbar/oauth-client.scss
@@ -845,11 +845,6 @@
 		background: none;
 		border: none;
 		text-align: center;
-		margin: 0;
-
-		&.is-blended {
-			padding-top: 16px;
-		}
 	}
 
 	.logged-out-form__links {
@@ -900,6 +895,10 @@
 		}
 	}
 
+	.logged-out-form__footer {
+		margin: 0;
+	}
+
 	.signup-form__woo-wrapper .gridicon {
 		color: var(--color-primary);
 	}
@@ -910,20 +909,6 @@
 
 	.formatted-header__subtitle {
 		display: none;
-	}
-
-	.signup-form__social {
-		p {
-			color: var( --studio-gray-60 );
-		}
-
-		.social-buttons__button {
-			width: 100%;
-		}
-	}
-
-	.signup-form__social-buttons-tos a {
-		color: $woo-purple-60;
 	}
 }
 
