Fix/Disable multiple stylelint errors  (#68022)
* Ignore unit-allowed-list

* Fix selector-pseudo-class-parentheses-space-inside

* Fix scss/at-import-no-partial-leading-underscore

* Fix property-no-unknown

* Ignore no-irregular-whitespace

* Fix import

* Fix imports

* Fix more imports

* Fix no-duplicate-at-import-rules

* Disable underscore rule for relative imports

--- a/apps/notifications/src/panel/boot/stylesheets/main.scss
+++ b/apps/notifications/src/panel/boot/stylesheets/main.scss
@@ -769,10 +769,12 @@
 			list-style: none;
 
 			.wpnc__todo-done::before {
+				/* stylelint-disable-next-line no-irregular-whitespace */
 				content: "◉ ";
 			}
 
 			.wpnc__todo-not-done::before {
+				/* stylelint-disable-next-line no-irregular-whitespace */
 				content: "◎ ";
 			}
 		}
