--- a/client/assets/stylesheets/_main.scss
+++ b/client/assets/stylesheets/_main.scss
@@ -61,6 +61,7 @@ body {
 		cursor: pointer;
 	}
 
+	/* stylelint-disable-next-line unit-allowed-list */
 	@media ( -webkit-min-device-pixel-ratio: 1.25 ), ( min-resolution: 120dpi ) {
 		&.font-smoothing-antialiased {
 			text-rendering: optimizeLegibility;
