--- a/client/blocks/reader-full-post/style.scss
+++ b/client/blocks/reader-full-post/style.scss
@@ -1,5 +1,5 @@
 // Styles targeted at story content
-@import "./_content.scss";
+@import "./content";
 
 .is-group-reader.has-no-sidebar {
 	.masterbar {
