--- a/client/blocks/signup-form/p2.scss
+++ b/client/blocks/signup-form/p2.scss
@@ -1,4 +1,4 @@
-@import "calypso/assets/stylesheets/_p2-extends.scss";
+@import "calypso/assets/stylesheets/p2-extends";
 
 .is-p2-invite.invite-accept,
 .is-p2-signup .signup__step.is-user {
