--- a/client/components/theme/style.scss
+++ b/client/components/theme/style.scss
@@ -402,7 +402,7 @@ $theme-info-height: 54px;
 }
 
 .theme__ribbon {
-	text-transfrom: capitalize;
+	text-transform: capitalize;
 }
 
 .theme__tooltip {
