--- a/client/landing/stepper/declarative-flow/internals/steps-repository/design-setup/preview-toolbar.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/design-setup/preview-toolbar.scss
@@ -1,4 +1,4 @@
-@import "@wordpress/base-styles/_breakpoints.scss";
+@import "@wordpress/base-styles/breakpoints";
 @import "@wordpress/base-styles/mixins";
 
 .preview-toolbar__toolbar {
