--- a/client/landing/stepper/declarative-flow/internals/steps-repository/woo-verify-email/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/woo-verify-email/style.scss
@@ -1,6 +1,6 @@
 @import "@automattic/onboarding/styles/mixins";
-@import "@wordpress/base-styles/_breakpoints.scss";
-@import "@wordpress/base-styles/_mixins.scss";
+@import "@wordpress/base-styles/breakpoints";
+@import "@wordpress/base-styles/mixins";
 
 $bg-image: url("./celebration-background.svg");
 
