--- a/client/layout/masterbar/login.scss
+++ b/client/layout/masterbar/login.scss
@@ -1,4 +1,4 @@
-@import "@wordpress/base-styles/_breakpoints.scss";
+@import "@wordpress/base-styles/breakpoints";
 
 .masterbar__login {
 	width: 100%;
