--- a/client/signup/videopress-step-wrapper/style.scss
+++ b/client/signup/videopress-step-wrapper/style.scss
@@ -1,7 +1,7 @@
 @import url( "https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;900&display=swap" );
 @import "@wordpress/base-styles/breakpoints";
 @import "@wordpress/base-styles/mixins";
-@import "calypso/assets/stylesheets/_videopress-extends.scss";
+@import "calypso/assets/stylesheets/videopress-extends";
 @import "@automattic/typography/styles/variables";
 
 :root {
