--- a/apps/editing-toolkit/editing-toolkit-plugin/common/index.scss
+++ b/apps/editing-toolkit/editing-toolkit-plugin/common/index.scss
@@ -27,6 +27,7 @@ body.slider-width-workaround {
 	-webkit-font-smoothing: antialiased;
 }
 
+/* stylelint-disable-next-line unit-allowed-list */
 @media ( -webkit-min-device-pixel-ratio: 1.25 ), ( min-resolution: 120dpi ) {
 	body.font-smoothing-antialiased {
 		@include font-smoothing-antialiased;
