--- a/client/blocks/comments/post-comment-content.scss
+++ b/client/blocks/comments/post-comment-content.scss
@@ -1,3 +1,4 @@
+/* stylelint-disable-next-line scss/at-import-no-partial-leading-underscore */
 @import "calypso/assets/stylesheets/shared/_rendered-blocks.scss";
 
 // Post comments line-clamping
