--- a/client/blocks/import/style/base.scss
+++ b/client/blocks/import/style/base.scss
@@ -1,7 +1,7 @@
 @import "@automattic/onboarding/styles/base-styles.scss";
 @import "@automattic/onboarding/styles/mixins.scss";
-@import "@wordpress/base-styles/_breakpoints.scss";
-@import "@wordpress/base-styles/_mixins.scss";
+@import "@wordpress/base-styles/breakpoints";
+@import "@wordpress/base-styles/mixins";
 @import "./mixins.scss";
 @import "./components.scss";
 
