--- a/client/blocks/login/style.scss
+++ b/client/blocks/login/style.scss
@@ -1,6 +1,6 @@
 @import "@wordpress/base-styles/breakpoints";
 @import "@wordpress/base-styles/mixins";
-@import "calypso/assets/stylesheets/_p2-extends.scss";
+@import "calypso/assets/stylesheets/p2-extends";
 
 .layout:not(.is-jetpack-woocommerce-flow):not(.is-jetpack-woo-dna-flow):not(.is-wccom-oauth-flow) {
 	.login.is-jetpack {
