--- a/client/jetpack-cloud/sections/partner-portal/text-placeholder/style.scss
+++ b/client/jetpack-cloud/sections/partner-portal/text-placeholder/style.scss
@@ -1,4 +1,4 @@
-@import "@wordpress/base-styles/_mixins.scss";
+@import "@wordpress/base-styles/mixins";
 
 .partner-portal-text-placeholder {
 	@include placeholder( --color-neutral-10 );
