--- a/client/jetpack-cloud/sections/partner-portal/unassign-license-dialog/style.scss
+++ b/client/jetpack-cloud/sections/partner-portal/unassign-license-dialog/style.scss
@@ -1,5 +1,5 @@
-@import "@wordpress/base-styles/_breakpoints.scss";
-@import "@wordpress/base-styles/_mixins.scss";
+@import "@wordpress/base-styles/breakpoints";
+@import "@wordpress/base-styles/mixins";
 
 .unassign-license-dialog {
 	&.dialog.card {
