--- a/client/landing/stepper/declarative-flow/internals/steps-repository/design-setup/theme-info-popup.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/design-setup/theme-info-popup.scss
@@ -1,5 +1,5 @@
-@import "@wordpress/base-styles/_breakpoints.scss";
-@import "@wordpress/base-styles/_mixins.scss";
+@import "@wordpress/base-styles/breakpoints";
+@import "@wordpress/base-styles/mixins";
 @import "@automattic/typography/styles/fonts";
 
 @font-face {
