--- a/client/landing/stepper/declarative-flow/internals/steps-repository/error-step/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/error-step/style.scss
@@ -1,6 +1,6 @@
 @import "@automattic/onboarding/styles/mixins";
-@import "@wordpress/base-styles/_breakpoints.scss";
-@import "@wordpress/base-styles/_mixins.scss";
+@import "@wordpress/base-styles/breakpoints";
+@import "@wordpress/base-styles/mixins";
 
 $design-button-primary-color: var(--color-primary);
 $design-button-primary-hover-color: var(--color-primary-60);
