--- a/client/landing/stepper/declarative-flow/internals/steps-repository/site-vertical/form.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/site-vertical/form.scss
@@ -1,5 +1,5 @@
-@import "@wordpress/base-styles/_breakpoints.scss";
-@import "@wordpress/base-styles/_mixins.scss";
+@import "@wordpress/base-styles/breakpoints";
+@import "@wordpress/base-styles/mixins";
 
 .site-vertical__form {
 	margin-top: 12px;
