--- a/client/signup/steps/courses/style.scss
+++ b/client/signup/steps/courses/style.scss
@@ -1,5 +1,5 @@
-@import "@wordpress/base-styles/_breakpoints.scss";
-@import "@wordpress/base-styles/_mixins.scss";
+@import "@wordpress/base-styles/breakpoints";
+@import "@wordpress/base-styles/mixins";
 
 .courses {
 	// Not good but this way can easily change the background color for courses step
