--- a/client/signup/steps/design-picker/preview-toolbar.scss
+++ b/client/signup/steps/design-picker/preview-toolbar.scss
@@ -1,4 +1,4 @@
-@import "@wordpress/base-styles/_breakpoints.scss";
+@import "@wordpress/base-styles/breakpoints";
 @import "@wordpress/base-styles/mixins";
 
 .preview-toolbar__toolbar {
