--- a/client/components/foldable-card/style.scss
+++ b/client/components/foldable-card/style.scss
@@ -135,6 +135,21 @@ button.foldable-card__action {
 	display: none;
 }
 
+.foldable-card.is-smooth .foldable-card__content {
+	display: block;
+	overflow: hidden;
+
+	transition: max-height 0.25s ease;
+	max-height: 0;
+}
+
+.foldable-card.is-expanded.is-smooth .foldable-card__content {
+	height: auto;
+	max-height: 250px; // fallback if not set inline with js
+	transition: max-height 0.25s ease;
+	padding: 0;
+}
+
 .foldable-card.is-expanded .foldable-card__content {
 	display: block;
 	padding: 16px;
