Help Center: fix sticky CTA when minimized (#68153)

--- a/packages/help-center/src/components/help-center-contact-form.scss
+++ b/packages/help-center/src/components/help-center-contact-form.scss
@@ -89,14 +89,25 @@
 }
 
 section.contact-form-submit {
-	position: fixed;
+	// this creates a border for the CTA.
+	// a simple border won't cut it because it would be padded in.
+	&::before {
+		content: " ";
+		display: block;
+		height: 1px;
+		background: rgba(0, 0, 0, 0.1);
+		position: absolute;
+		left: -16px;
+		top: 0;
+		width: calc(100% + 32px);
+	}
+	position: sticky;
 	bottom: 0;
 	left: 0;
 	width: 100%;
 	box-sizing: border-box;
 	background: #fff;
 	padding: 16px;
-	border-top: 1px solid rgba(0, 0, 0, 0.1);
 
 	.button.help-center-contact-form__site-picker-cta.is-primary {
 		background-color: var(--color-accent);
