Adjust lightbox close button stacking order on top (z-index). (#68127)

--- a/client/my-sites/plans/jetpack-plans/product-lightbox/style.scss
+++ b/client/my-sites/plans/jetpack-plans/product-lightbox/style.scss
@@ -378,6 +378,11 @@
 	.product-lightbox__variants-options {
 		margin: 0;
 	}
+
+	.product-lightbox__close-button {
+		z-index: 1;
+		background-color: #fff;
+	}
 }
 
 @media screen and ( max-height: 630px ) and ( orientation: landscape ) {
