Launchpad: Add Link in Bio post-setup flow and screen

--- a/client/landing/stepper/declarative-flow/internals/global.scss
+++ b/client/landing/stepper/declarative-flow/internals/global.scss
@@ -58,6 +58,7 @@ button {
 .newsletter-setup,
 .patterns,
 .link-in-bio-setup,
+.link-in-bio-post-setup,
 .completing-purchase,
 .anchor-fm,
 .subscribers,
