--- a/client/layout/masterbar/woo.scss
+++ b/client/layout/masterbar/woo.scss
@@ -15,15 +15,44 @@
 		margin: 0;
 		list-style-type: none;
 		width: 100%;
+
+		.masterbar__login-back-link {
+			margin-top: -10px;
+
+			@media screen and ( max-width: 660px ) {
+				display: none;
+			}
+		}
+	}
+}
+
+.masterbar__woo-nav-item a.masterbar__login-back-link {
+	color: var(--studio-gray-100);
+	text-decoration: none;
+	display: flex;
+}
+
+.masterbar__woo-mobile-nav {
+	display: none;
+	flex-direction: row;
+	align-items: center;
+	margin: 0;
+	list-style-type: none;
+	width: 100%;
+	position: fixed;
+	bottom: 0;
+	padding: 24px 0;
+	box-shadow: inset 0 1px 0 #e2e4e7;
+	background-color: #fff;
+	z-index: 999;
+
+	@media screen and ( max-width: 660px ) {
+		display: flex;
 	}
 
-	.masterbar__woo-nav-item .masterbar__login-back-link {
-		margin-top: -10px;
-		color: var(--studio-gray-100);
-		text-decoration: none;
-
+	.masterbar__login-back-link {
 		@media screen and ( max-width: 660px ) {
-			display: none;
+			display: block;
 		}
 	}
 }
@@ -39,7 +68,7 @@
 	$woo-font-size-base: 14px;
 	$woo-font-size-input: 14px;
 	$woo-radius-input: 4px;
-	$woo-form-whitespace: 85px;
+	$woo-form-whitespace: 60px;
 	$woo-form-whitespace-660: 20px;
 	$woo-form-divider-border: 1px solid #e6e6e6;
 	$gray-60: #50575e;
@@ -69,6 +98,7 @@
 		font-weight: 400;
 		font-size: $woo-font-size-input;
 		line-height: 18px;
+		margin-bottom: 16px;
 
 		&:focus,
 		&:hover,
@@ -89,7 +119,6 @@
 	.wp-login__links a:hover,
 	.wp-login__links button:hover,
 	.button:not(.social-buttons__button) {
-		font-weight: 500;
 		font-size: $woo-font-size-base;
 		line-height: 28px;
 		text-align: center;
@@ -143,12 +172,22 @@
 		}
 	}
 
+	.login__form {
+		display: flex;
+		flex-direction: column;
+		padding: 54px 24px 32px;
+
+		@media screen and ( max-width: 660px ) {
+			padding: 32px 16px 28px;
+		}
+	}
+
 	.login__form-header {
 		margin-top: 0;
 		margin-bottom: 8px;
 
 		@media screen and ( max-width: 660px ) {
-			margin-bottom: 12px;
+			margin-bottom: 16px;
 		}
 	}
 
@@ -209,8 +248,6 @@
 
 		@media screen and ( max-width: 660px ) {
 			align-items: flex-start;
-			padding-left: $woo-form-whitespace-660;
-			padding-right: $woo-form-whitespace-660;
 		}
 
 		.login__social-buttons-container {
@@ -345,11 +382,6 @@
 		text-align: center;
 	}
 
-	.login__form {
-		display: flex;
-		flex-direction: column;
-	}
-
 	.continue-as-user {
 		max-width: 472px;
 		margin: 54px auto 0;
@@ -423,6 +455,7 @@
 	.logged-out-form {
 		max-width: 100%;
 		background: inherit;
+		padding: 0 0 8px;
 	}
 
 	.logged-out-form label,
@@ -446,6 +479,10 @@
 		padding-top: 40px;
 		padding-bottom: 40px;
 		text-align: center;
+
+		@media screen and ( max-width: 660px ) {
+			padding-top: 28px;
+		}
 	}
 
 	.two-factor-authentication__actions.card {
@@ -454,6 +491,7 @@
 			color: var(--color-gray-100);
 			font-weight: 500;
 			line-height: 20px;
+			box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
 		}
 	}
 
@@ -466,6 +504,7 @@
 		p {
 			color: $gray-60;
 			line-height: 24px;
+			margin-bottom: 4px;
 		}
 
 		a {
@@ -518,7 +557,8 @@
 	.login .login__form-forgot-password {
 		text-align: start;
 		color: $gray-50;
-		margin-bottom: 8px;
+		margin-bottom: 32px;
+		font-weight: 400;
 	}
 
 	.wp-login__links,
@@ -573,6 +613,11 @@
 		font-family: $sans;
 		margin: 0 0 8px;
 		padding: 0;
+
+		@media screen and ( max-width: 660px ) {
+			padding-left: $woo-form-whitespace-660;
+			padding-right: $woo-form-whitespace-660;
+		}
 	}
 
 	.formatted-header__subtitle {
@@ -609,8 +654,7 @@
 	.signup-form__social {
 		max-width: 100%;
 		border-top: 1px solid #e6e6e6;
-		padding-top: 44px;
-		padding-bottom: 14px;
+		padding: 44px 0 14px;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
@@ -631,6 +675,15 @@
 		button {
 			padding: 0;
 		}
+
+		.signup-form__social-buttons-tos {
+			text-align: left;
+			color: $gray-50;
+
+			a {
+				line-height: 18px;
+			}
+		}
 	}
 
 	.signup-form__social-buttons button {
@@ -644,10 +697,5 @@
 			padding: 12px;
 			margin-top: 0;
 		}
-	}
-
-	.signup-form__social-buttons-tos {
-		text-align: left;
-		color: $gray-50;
 	}
 }
