Pricing page rework: Fix text in licensing prompt dialog to make it clickable link (#68199)

--- a/client/components/jetpack/licensing-prompt-dialog/style.scss
+++ b/client/components/jetpack/licensing-prompt-dialog/style.scss
@@ -53,7 +53,12 @@
 .licensing-prompt-dialog .licensing-prompt-dialog__instructions {
 	font-size: $font-body;
 	margin-bottom: 1.5em;
+
+	.user-purchases-link {
+		text-decoration: underline;
+	}
 }
+
 
 .licensing-prompt-dialog__actions {
 	display: flex;
